# tflm-offline-interpreter

./: CMakeLists.txt  README.md
cmake/: FindTFLite.cmake  LinkTFLite.cmake
src/: MemMap.cpp  MemMap.h  OfflineOffset.cpp  OfflineOffset.h  OptimalMemPlanner.cpp  OptimalMemPlanner.h  TensorPlanning.cpp  TensorPlanning.h  main.cpp
